--- a/localisation/ass_l_braz_por.yml
+++ b/localisation/ass_l_braz_por.yml
@@ -48,6 +48,7 @@ ass_expansion_slot_2_DESC: "$ass_expansion_slot_1_DESC$"
 ass_components: "Autonomous CPUs"
 ass_components_DESC: "Central processing units for our Autonomous Assemblers."
 ass_military_station_type: "Station Type"
+ass_military_station_type_DESC: "Unlocks new station type for $ass_plural_colored$ to construct around a $ass_marker_colored$."
 
 tech_autonomous_assembler: "Autonomous Assembler"
 tech_autonomous_assembler_desc: "Construction in space comes with all sorts of dangers, so if we would somehow send off autonomous construction ships instead of our manned ones, that would be much preferred."
